--- a/KaloriWebApplication/KaloriWebApplication.csproj
+++ b/KaloriWebApplication/KaloriWebApplication.csproj
@@ -4,6 +4,7 @@
     <TargetFramework>net8.0</TargetFramework>
     <Nullable>enable</Nullable>
     <ImplicitUsings>enable</ImplicitUsings>
+    <UserSecretsId>c4320800-fcfc-4a09-886b-c4b9568363f6</UserSecretsId>
   </PropertyGroup>
 
   <ItemGroup>
