--- a/KaloriWebApplication/appsettings.json
+++ b/KaloriWebApplication/appsettings.json
@@ -8,5 +8,5 @@
   },
   "AllowedHosts": "*",
 
-  "ConnectionStrings": { "TutorialDbConnection": "Data Source=LAPTOP-3I5VK4D6;Integrated Security=True;Connect Timeout=30;Encrypt=True;Trust Server Certificate=True;Application Intent=ReadWrite;Multi Subnet Failover=False" }
+  "ConnectionStrings": { "TutorialDbConnection": "Server=tcp:kaloriapp.database.windows.net,1433;Initial Catalog=Context;Persist Security Info=False;User ID=admin1;Password={196519Ab};MultipleActiveResultSets=False;Encrypt=True;TrustServerCertificate=True;Connection Timeout=30;" }
 }
