--- a/KaloriWebApplication/KaloriWebApplication.csproj
+++ b/KaloriWebApplication/KaloriWebApplication.csproj
@@ -8,6 +8,11 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <Content Remove="Views\Account\EditProfile.cshtml" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <_ContentIncludedByDefault Remove="Views\Account\EditProfile.cshtml" />
     <_ContentIncludedByDefault Remove="wwwroot\css\site_deneme.css" />
   </ItemGroup>
 
@@ -23,6 +28,14 @@
       <PrivateAssets>all</PrivateAssets>
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
     </PackageReference>
+  </ItemGroup>
+
+  <ItemGroup>
+    <UpToDateCheckInput Remove="Views\Account\EditProfile.cshtml" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <None Include="Views\Account\EditProfile.cshtml" />
   </ItemGroup>
 
 </Project>
