--- a/KaloriWebApplication/KaloriWebApplication.csproj
+++ b/KaloriWebApplication/KaloriWebApplication.csproj
@@ -26,4 +26,8 @@
     <PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="8.0.3" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="wwwroot\NewFolder\" />
+  </ItemGroup>
+
 </Project>
