--- a/KaloriWebApplication/KaloriWebApplication.csproj
+++ b/KaloriWebApplication/KaloriWebApplication.csproj
@@ -32,5 +32,9 @@
   <ItemGroup>
     <Folder Include="wwwroot\NewFolder\" />
   </ItemGroup>
+	<ItemGroup>
+		<PackageReference Include="Microsoft.ML" Version="2.0.0" />
+		<PackageReference Include="Microsoft.ML.OnnxRuntime" Version="1.15.0" />
+	</ItemGroup>
 
 </Project>
