--- a/KaloriWebApplication/appsettings.json
+++ b/KaloriWebApplication/appsettings.json
@@ -8,5 +8,12 @@
   },
   "AllowedHosts": "*",
 
-  "ConnectionStrings": { "TutorialDbConnection": "Server=tcp:kalori-app.database.windows.net,1433;Initial Catalog=Context;Persist Security Info=False;User ID=admin1;Password=196519Ab;MultipleActiveResultSets=False;Encrypt=True;TrustServerCertificate=True;Connection Timeout=45;" }
+    "ConnectionStrings": {
+        "DefaultConnection": ""
+    },
+
+    "AzureComputerVision": {
+        "SubscriptionKey": "",
+        "Endpoint": ""
+    }
 }
